[project]
name = "distanceclosure"
version = "0.5"
authors = [
    {name = "Rion Brattig Correia", email = "rionbr@gmail.com"},
]
description = "Distance Closure on Complex Networks"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
]