[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "distanceclosure"
version = "0.5"
authors = [
    {name = "Rion Brattig Correia", email = "rionbr@gmail.com"},
    {name = "Felipe Xavier Costa", email = "fcosta@binghamton.edu"},
]
description = "Distance Closure on Complex Networks"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "networkx>=2.1",
    "pandas>=0.25",
]